--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -12,6 +12,6 @@
   @!section('content')
   {{ script('https://unpkg.com/jquery@3.3.1/dist/jquery.js') }}
   {{ script('https://unpkg.com/bootstrap@4.0.0/dist/js/bootstrap.min.js') }}
-  {{ script('main') }}
+  {{ script('js/main') }}
 </body>
 </html>
