--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {{ style('https://unpkg.com/bootstrap@4.0.0/dist/css/bootstrap.min.css') }}
   {{ style('css/main') }}
+  {{ style('font-awesome.min.css') }}
   <title>ninghao</title>
 </head>
 <body>
