--- a/resources/views/post/index.edge
+++ b/resources/views/post/index.edge
@@ -5,6 +5,16 @@
         @each(post in posts)
             <h3 class="mt-5 mb-4">{{ post.title }}</h3>
             <div>{{ post.content }}</div>
+            <div class="text-muted mt-2">
+                {{ post.user.username }}
+
+                <span class="px-2">
+                    <a href="https://github.com/{{ post.user.profile.github }}" class="text-muted">
+                        <i class="fa fa-github" aria-hidden="true"></i> 
+                    </a>
+                </span>
+                
+            </div>
         @endeach
     </div>
 @endsection
