--- a/resources/views/post/create.edge
+++ b/resources/views/post/create.edge
@@ -21,6 +21,7 @@
                     class="form-control" 
                     placeholder="Write something amazing"></textarea>
             </div>
+
             <div class="form-group">
                 <span class="px-3 text-muted"><i class="fa fa-user" aria-hidden="true"></i></span>
                 @each(user in users)
@@ -36,6 +37,23 @@
                     </div>
                 @endeach    
             </div>
+
+            <div class="form-group">
+                <span class="px-3 text-muted"><i class="fa fa-tag" aria-hidden="true"></i></span>
+                @each(tag in tags)
+                    <div class="form-check form-check-inline">
+                        <input type="checkbox" 
+                            name="tags" 
+                            value="{{ tag.id }}"
+                            id="tag-{{ tag.id }}" 
+                            class="form-check-input">
+                        <label for="tag-{{ tag.id }}" class="form-check-label">
+                            {{ tag.title }}
+                        </label>    
+                    </div>
+                @endeach
+            </div>
+
             {{ csrfField() }}
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
