'编辑页中关于单选框与复选框的数据默认值的编辑'

--- a/resources/views/components/form/radio-horizontal.edge
+++ b/resources/views/components/form/radio-horizontal.edge
@@ -10,7 +10,8 @@
                         name="{{ name }}" 
                         value="{{ item[value] }}"
                         id="{{ name }}-{{ item.id }}" 
-                        class="form-check-input">
+                        class="form-check-input"
+                        {{ item.checked ? 'checked' : '' }}>
                     <label for="{{ name }}-{{ item.id }}" class="form-check-label">
                         {{ item[label] }}
                     </label>    
