--- a/resources/views/components/form/textarea.edge
+++ b/resources/views/components/form/textarea.edge
@@ -6,6 +6,6 @@
         name="{{ name }}"
         cols="{{ cols || 80 }}"
         rows="{{ rows || 8 }}"
-        placeholder="{{ placeholder }}">{{ old(name, '') }}</textarea>
+        placeholder="{{ placeholder }}">{{ old(name, value) }}</textarea>
         {{ elIf('<div class="invalid-feedback">$self</div>', getErrorFor(name), hasErrorFor(name)) }}
 </div>
