--- a/resources/views/post/edit.edge
+++ b/resources/views/post/edit.edge
@@ -4,24 +4,46 @@
     <div class="container">
         <h3 class="mt-5 mb-4">Edit Post</h3>
         <form action="/posts/{{ post.id }}?_method=PUT" method="POST">
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input 
-                    value="{{post.title}}"
-                    type="text" 
-                    class="form-control" 
-                    placeholder="Enter title here" 
-                    name="title">
-            </div>
-            <div class="form-group">
-                <label for="content">Content</label>
-                <textarea 
-                    name="content" 
-                    cols="30" 
-                    rows="10" 
-                    class="form-control" 
-                    placeholder="Write something amazing">{{post.content}}</textarea>
-            </div>
+
+            @!component('components.form.input',{
+                name: "title",
+                label: "Title",
+                value: post.title
+            })
+
+            @!component('components.form.textarea',{
+                name: "content",
+                label: "Content",
+                value: post.content
+            })
+
+            @component('components.form.radio-horizontal',{
+                name: 'user_id',
+                items: users,
+                value: 'id',
+                label: 'username',
+                inline: true,
+                labelCol: 1
+            })
+                @slot('label')
+                    <span class="px-3 text-muted"><i class="fa fa-user" aria-hidden="true"></i></span>
+                @endslot
+            @endcomponent
+
+            @component('components.form.radio-horizontal', {
+                type: 'checkbox',
+                name: 'tag',
+                items: tags,
+                value: 'id',
+                label: 'title',
+                inline: true,
+                labelCol: 1
+            })
+                @slot('label')
+                    <span class="px-3 text-muted"><i class="fa fa-tag" aria-hidden="true"></i></span>
+                @endslot
+            @endcomponent
+
             {{ csrfField() }}
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
