'使用associate与sync方法来更新一对一和一对多的关系'

--- a/resources/views/post/edit.edge
+++ b/resources/views/post/edit.edge
@@ -32,7 +32,7 @@
 
             @component('components.form.radio-horizontal', {
                 type: 'checkbox',
-                name: 'tag',
+                name: 'tags',
                 items: tags,
                 value: 'id',
                 label: 'title',
