'利用Drive_delete删除文件'

--- a/resources/views/file/index.edge
+++ b/resources/views/file/index.edge
@@ -2,6 +2,14 @@
 
 @section('content')
     <div class="container">
+        
+        @if(flashMessage('message'))
+            @!component('components.alert',{
+                type: [flashMessage('type')],
+                message: [flashMessage('message')]
+            })
+        @endif
+
         <table class="table my-5">
             <thead>
                 <tr>
