--- a/resources/views/post/index.edge
+++ b/resources/views/post/index.edge
@@ -2,7 +2,7 @@
 
 @section('content')
     <div class="container">
-        @each(post in posts)
+        @each(post in data)
             <h3 class="mt-5 mb-4">
                 <a href="{{ route('PostController.show', { id: post.id }) }}">{{ post.title }}</a>
             </h3>
@@ -14,8 +14,14 @@
                         <i class="fa fa-github" aria-hidden="true"></i> 
                     </a>
                 </span>
-                
             </div>
         @endeach
+
+        @!component('components.pagination',{
+            total,
+            perPage,
+            page,
+            lastPage
+        })
     </div>
 @endsection
