--- a/resources/views/post/show.edge
+++ b/resources/views/post/show.edge
@@ -17,6 +17,14 @@
                 @endeach
             </div>
         @endif
+        <div class="border-top py-4">
+            <form action="{{ route('share.email', { id: post.id, type: 'post' }) }}" method="POST">
+                {{ csrfField() }}
+                <button class="btn btn-light text-muted" type="submit">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </button>
+            </form>
+        </div>
     </div>
     <ul class="nav justify-content-end fixed-bottom pb-4">
         <li class="nav-item">
