'优化视图中的container与alert组件并合并到布局里'

--- a/resources/views/file/index.edge
+++ b/resources/views/file/index.edge
@@ -1,15 +1,6 @@
-@layout('layout.main')
+@layout('layouts.main')
 
 @section('content')
-    <div class="container">
-        
-        @if(flashMessage('message'))
-            @!component('components.alert',{
-                type: [flashMessage('type')],
-                message: [flashMessage('message')]
-            })
-        @endif
-
         <table class="table my-5">
             <thead>
                 <tr>
