--- a/resources/views/file/create.edge
+++ b/resources/views/file/create.edge
@@ -1,15 +1,7 @@
-@layout('layout.main')
+@layout('layouts.main')
 
 @section('content')
-    <div class="container">
         <h3 class="my-5">Upload</h3>
-
-        @if(flashMessage('message'))
-            @!component('components.alert', {
-                type: [flashMessage('type')],
-                message: [flashMessage('message')]
-            })
-        @endif
 
         <form action="{{ route('files.store') }}" method='POST' enctype="multipart/form-data">
             <div class="form-group">
