--- a/resources/views/layouts/partials/header.edge
+++ b/resources/views/layouts/partials/header.edge
@@ -7,13 +7,6 @@
   {{ style('https://unpkg.com/bootstrap@4.0.0/dist/css/bootstrap.min.css') }}
   {{ style('css/main') }}
   {{ style('font-awesome.min.css') }}
-  <title>ninghao</title>
+  <title>iamjer</title>
 </head>
 <body>
-  @!include('partials.navbar')
-  @!section('content')
-  {{ script('https://unpkg.com/jquery@3.3.1/dist/jquery.js') }}
-  {{ script('https://unpkg.com/bootstrap@4.0.0/dist/js/bootstrap.min.js') }}
-  {{ script('js/main') }}
-</body>
-</html>
