--- a/resources/views/layouts/partials/header.edge
+++ b/resources/views/layouts/partials/header.edge
@@ -7,6 +7,6 @@
   {{ style('https://unpkg.com/bootstrap@4.0.0/dist/css/bootstrap.min.css') }}
   {{ style('css/main') }}
   {{ style('font-awesome.min.css') }}
-  <title>iamjer</title>
+  <title>{{ pageTitle || 'iamjer' }}</title>
 </head>
 <body>
