--- a/resources/views/post/show.edge
+++ b/resources/views/post/show.edge
@@ -1,6 +1,7 @@
 @layout('layouts.main')
 
 @section('content')
+    @set('pageTitle', post.title)
     <div class="container">
         <h1 class="mt-5 mb-4">{{post.title}}</h1>
         <div>
