--- a/resources/views/demo/antl.edge
+++ b/resources/views/demo/antl.edge
@@ -7,7 +7,14 @@
                 {{ locale }}
             </span>
             <p class="display-3 font-weight-light">
-                {{ message }}:{{ greeting }}
+                {{ message }}
+            </p>
+            <p class="display-3 font-weight-light">
+                {{ candy }}
+            </p>
+
+            <p class="display-3 font-weight-light">
+                {{ day }}
             </p>
         </div>
     </div>
